# CP6_letter_service

./: README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: models.py  urls.py
mailing/templates/: base.html
users/: models.py  urls.py  views.py
