[tool.poetry]
name = "cp6"
version = "0.1.0"
description = ""
authors = ["makxim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
django-apscheduler = "^0.6.2"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
